# FastAPI-Structure-pdf-generador

./: .env.example  .env.prod.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-swarm.yml  init_db.py  pyproject.toml  replit.md  requirements.txt
app/: main.py
app/core/: config.py  database.py  s3.py  security.py
app/models/: apikey.py  renderlog.py  template.py  user.py
app/routes/: apikeys.py  auth.py  images.py  me.py  pdf_convert.py  render.py  templates.py  web.py
app/schemas/: apikey.py  render.py  template.py  user.py
app/services/: apikey_service.py  auth_service.py  log_service.py  render_service.py  template_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: apikeys.html  base.html  dashboard.html  login.html  register.html  render.html  template_form.html  templates_list.html
app/utils/: jinja_engine.py  pdf_engine.py  pdf_to_images.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-es-head-meta-charset-UTF-8-titl_1767391206450.txt  Pasted--raise-exc-File-usr-local-lib-python3-11-site-packages-_1765089677788.txt  Pasted-1-Crear-un-proyecto-FastAPI-estructurado-en-m-dulos-Gen_1765043650683.txt  Pasted-INFO-10-0-2-17-38224-POST-api-render-beb6aba7-e49d-4299_1770301049384.txt
example_templates/: invoice.html
